# animevault

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  cors-proxy.cjs  package-lock.json  package.json  playwright.config.ts  prompt_master.md  screenshot_runner.js  tsconfig.json  vite.config.ts
.husky/: pre-commit
backend/: .env.example  .gitignore  README.md  package-lock.json  package.json
backend/src/: auth.ts  db.ts  index.ts
scripts/: pre-commit-check.cjs  pre-commit-check.js
src/: App.css  App.tsx  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json  main.json
src-tauri/permissions/: animevault-fs.toml  ipc-commands.toml
src-tauri/src/: auth_success.html  commands.rs  main.rs
src/components/: CommandPalette.tsx  SyncFloatingButton.tsx  UserProfile.tsx
src/components/anime/: AnimeCard.tsx  AnimeMetadataPanel.tsx  AnimeScreenshots.tsx  LocalMediaGrid.tsx
src/components/auth/: LoginButton.tsx
src/core/: domain.test.ts  domain.ts  types.ts
src/database/: schema.ts
src/pages/: AnimeDetail.tsx  Library.tsx  ProfilePage.tsx
src/services/: animeService.ts  authService.ts  database.ts  geminiService.ts  jikanService.ts  keyringService.ts  localFileService.test.ts  localFileService.ts  malImportService.ts  malService.ts  saasService.ts  syncService.ts  tauriService.ts
src/stores/: authStore.ts  autoScrollStore.ts  localAnimeStore.ts  saasAuthStore.ts  syncFloatingStore.ts  themeStore.ts
src/types/: anime.ts
src/utils/: fuzzy.ts
tests/: library.spec.ts
(+10 files in other folders)
