[package]
name = "animevault"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tiny_http = "0.12"
url = "2.5"
webbrowser = "0.8"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.22", features = ["json"] }
tauri-plugin-shell = "2"
rand = "0.9.1"
sha2 = "0.10.9"
base64 = "0.22.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
